--- a/mlb/index.html
+++ b/mlb/index.html
@@ -14,6 +14,6 @@
       <script src='//cdn.jsdelivr.net/npm/clappr-playback-rate-plugin@latest/dist/clappr-playback-rate-plugin.min.js'></script>
    </head>
    <body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false'>
-      <div id='player'></div><script src="base.js"></script>
+      <div id='player'></div><script src="//eduveel1.github.io/baleada/mlb/base.js"></script>
    </body>
 </html>
