--- a/yt.html
+++ b/yt.html
@@ -5,54 +5,66 @@
       <meta name='referrer' content='no-referrer'>
       <meta content='width=device-width, initial-scale=1' name='viewport'>
       <title>SlowD Player</title>
-      <link href='favicon2.ico' rel='shortcut icon' type='image/x-icon'>
-      <script src='//cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js'></script>
-      <script src='//cdn.jsdelivr.net/npm/level-selector@latest/dist/level-selector.min.js'></script>
-      <script src='//cdn.jsdelivr.net/npm/clappr-chromecast-plugin@latest/dist/clappr-chromecast-plugin.min.js'></script>
-      <script src='//cdn.jsdelivr.net/npm/clappr-pip@latest/dist/clappr-pip.min.js'></script>
-      <script src='//cdn.jsdelivr.net/npm/dash-shaka-playback@latest/dist/dash-shaka-playback.min.js'></script>
-      <script src='//cdn.jsdelivr.net/npm/clappr-playback-rate-plugin@latest/dist/clappr-playback-rate-plugin.min.js'></script>
-      <script src="https://towerz.me/clappr-youtube-playback/j/clappr-youtube-playback.js"></script>
-   </head>
-   <body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false'>
-      <div id='player'></div>
-      <script>
-         window.onload = function() {
-             var player = new Clappr.Player({      
-                 source: srcLOAD,
-                 poster: 'https://i.ytimg.com/vi/'+srcLOAD+'hqdefault.jpg',
-                 parentId: '#player',
-                 mimeType: 'audio/mpeg',
-                 watermark: "https://i.ibb.co/Tgk2YrC/Logow-1-1.png", 
-                 position: 'top-left',
-                 plugins: [LevelSelector, ChromecastPlugin, ClapprPip.PipButton, ClapprPip.PipPlugin, DashShakaPlayback, Clappr.MediaControl, PlaybackRatePlugin, YoutubePlayback],
-                 events: {onReady: function() {var plugin = this.getPlugin('click_to_pause'); plugin && plugin.disable();},},
-                 height: '100%',
-                 width: '100%',
-                 autoPlay: false,
-                 mute: true,
-                 shakaConfiguration: {
-                 manifest: {retryParameters: {maxAttempts: Infinity}},
-                 streaming: {retryParameters: {maxAttempts: Infinity}},
-                 drm: {retryParameters: {maxAttempts: Infinity}},
-                 },
-                 playbackRateConfig: {
-                 defaultValue: '1.00x',
-                 options: [
-                 {value: '0.10', label: '0.10x'},
-                 {value: '0.25', label: '0.25x'},
-                 {value: '0.50', label: '0.50x'},
-                 {value: '0.75', label: '0.75x'},
-                 {value: '1.00', label: '1.00x'},
-                 {value: '1.25', label: '1.25x'},
-                 {value: '1.50', label: '1.50x'},
-                 {value: '1.75', label: '1.75x'},
-                 {value: '2.00', label: '2.00x'},
-                 ]
-                 },
-             });
-         };
-      </script>
-      <script src="yt.js"></script>
-   </body>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" charset="utf-8" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="yt.js"></script>
+    <script type="text/javascript" charset="utf-8" src="https://cdn.jsdelivr.net/ace/1.2.6/min/ace.js"></script>
+    <script src='//cdn.jsdelivr.net/npm/level-selector@latest/dist/level-selector.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/clappr-chromecast-plugin@latest/dist/clappr-chromecast-plugin.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/clappr-pip@latest/dist/clappr-pip.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/dash-shaka-playback@latest/dist/dash-shaka-playback.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/clappr-playback-rate-plugin@latest/dist/clappr-playback-rate-plugin.min.js'></script>
+</head>
+
+<body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false'>
+
+    <section class="container">
+        <div class="main">
+            <div id="output">
+                <div id="player-wrapper" class="player"></div>
+            </div>
+        </div>
+
+    </section>
+
+    <script>
+        var playerElement = document.getElementById("player-wrapper");
+        var vid = srcLOAD;
+        var player = new Clappr.Player({
+            source: vid,
+            poster: 'https://i.ytimg.com/vi/'+srcLOAD+'/mqdefault.jpg',
+            parentId: '#player',
+            mimeType: 'audio/mpeg',
+            watermark: "https://i.ibb.co/Tgk2YrC/Logow-1-1.png",
+            position: 'top-left',
+            height: '100%',
+            width: '100%',
+            plugins: [YoutubePlugin, YoutubePluginControl, LevelSelector, ChromecastPlugin, ClapprPip.PipButton, ClapprPip.PipPlugin, DashShakaPlayback, PlaybackRatePlugin, ],
+            events: {onReady: function() {var plugin = this.getPlugin('click_to_pause'); plugin && plugin.disable();},},
+            autoPlay: true,
+            mute: false,
+            shakaConfiguration: {
+            manifest: {retryParameters: {maxAttempts: Infinity}},
+            streaming: {retryParameters: {maxAttempts: Infinity}},
+            drm: {retryParameters: {maxAttempts: Infinity}},
+            },
+            playbackRateConfig: {
+            defaultValue: '1.00x',
+            options: [
+            {value: '0.10', label: '0.10x'},
+            {value: '0.25', label: '0.25x'},
+            {value: '0.50', label: '0.50x'},
+            {value: '0.75', label: '0.75x'},
+            {value: '1.00', label: '1.00x'},
+            {value: '1.25', label: '1.25x'},
+            {value: '1.50', label: '1.50x'},
+            {value: '1.75', label: '1.75x'},
+            {value: '2.00', label: '2.00x'},
+            ]
+            },
+        });
+        player.attachTo(playerElement);
+    </script>
+</body>
+
 </html>
