--- a/yt.html
+++ b/yt.html
@@ -32,7 +32,7 @@
         var vid = srcLOAD;
         var player = new Clappr.Player({
             source: vid,
-            poster: 'https://i.ytimg.com/vi/'+srcLOAD+'/mqdefault.jpg',
+            poster: 'https://i.ytimg.com/vi/'+srcLOAD+'/maxresdefault.jpg',
             parentId: '#player',
             mimeType: 'audio/mpeg',
             watermark: "https://i.ibb.co/Tgk2YrC/Logow-1-1.png",
